# Advance-RAG-

./: .dockerignore  .gitignore  .groq_gen_test.py  .run_groq_test.py  .streamlit_launcher.py  .validate_and_fix_keys.py  .verify_imports_and_install.py  ARCHITECTURE.md  CONNECTIVITY.md  Dockerfile  FEATURE_SUMMARY.txt  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION.md  KB_AUTO_FALLBACK_FEATURES.md  Makefile  PROBLEM_ANALYSIS.md  PROJECT_REVIEW.md  QUICK_START_NEW_FEATURES.md  README.md  README_NEW_FEATURES.md  TROUBLESHOOTING.md  WORKFLOW_DEMO.md  app.py  app_new.py  architecture.mmd  architecture_vector_pipeline.mmd  auth.py  cleanup.py  config.py  constraints.txt  current_validator_output.json  health.py  install.py  knowledge_base.py  logger.py  main.py  memory.py  multi_lang.py  pyproject.toml  (+5 more)
.github/: copilot-instructions.md
kb/: kb_backup.json
tests/: test_memory.py
tools/: generate_architecture_png.py  generate_mermaid_png.ps1  generate_presentation.py  net_diag.py  run_document_tests.py  self_test.py  validate_project.py
tools/test_samples/: sample_text.txt
